syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dabanshan.grpc.domain";
option java_outer_classname = "AccountProto";
option objc_class_prefix = "DBS";

package pb;

message Account {
    string id = 1;
    string username = 2; //手机号
    string password = 3; //密码
    string name = 4; //姓名
    string invite = 5; //邀请码
}

message CreateAccountRequest {
    string username = 1;
    string password = 2;
}

message CreateAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetByTokenRequest{
    string token = 1;
}

message GetByTokenResponse{
    Account account = 1;
}

message GetByUsernameRequest{
    string username = 1;
    string password = 2;
}

message GetByUsernameResponse{
    Account account = 1;
}

message UpdateSessionTokenRequest{
  string accountid = 1;
  string token = 2;
}

message UpdateSessionTokenResonse{
  bool updated = 1;
}
